# aimrun

./: README.md  pyproject.toml
aimrun/: __init__.py  __main__.py  utils.py
aimrun/commands/: extract.py  plot.py  sync.py
examples/: plot-advanced.yaml  plot.yaml
